bison/bison_test.output
Terminals unused in grammar

    "string literal"
    "integer literal"
    "float literal"


Grammar

    0 $accept: parse "end of input"

    1 parse: Names

    2 Names: Name
    3      | Names Name

    4 Name: "identifier"
    5     | FooBar

    6 FooBar: "foo" OptBar

    7 OptBar: ε
    8       | "bar"


Terminals, with rules where they appear

    "end of input" (0) 0
    error (256)
    "identifier" <string> (258) 4
    "string literal" <string> (259)
    "integer literal" <string> (260)
    "float literal" <string> (261)
    "foo" <node> (262) 6
    "bar" <node> (263) 8


Nonterminals, with rules where they appear

    $accept (9)
        on left: 0
    parse (10)
        on left: 1
        on right: 0
    Names <node> (11)
        on left: 2 3
        on right: 1 3
    Name <node> (12)
        on left: 4 5
        on right: 2 3
    FooBar <node> (13)
        on left: 6
        on right: 5
    OptBar <node> (14)
        on left: 7 8
        on right: 6


State 0

    0 $accept: • parse "end of input"

    "identifier"  shift, and go to state 1
    "foo"         shift, and go to state 2

    parse   go to state 3
    Names   go to state 4
    Name    go to state 5
    FooBar  go to state 6


State 1

    4 Name: "identifier" •

    $default  reduce using rule 4 (Name)


State 2

    6 FooBar: "foo" • OptBar

    "bar"  shift, and go to state 7

    $default  reduce using rule 7 (OptBar)

    OptBar  go to state 8


State 3

    0 $accept: parse • "end of input"

    "end of input"  shift, and go to state 9


State 4

    1 parse: Names •
    3 Names: Names • Name

    "identifier"  shift, and go to state 1
    "foo"         shift, and go to state 2

    $default  reduce using rule 1 (parse)

    Name    go to state 10
    FooBar  go to state 6


State 5

    2 Names: Name •

    $default  reduce using rule 2 (Names)


State 6

    5 Name: FooBar •

    $default  reduce using rule 5 (Name)


State 7

    8 OptBar: "bar" •

    $default  reduce using rule 8 (OptBar)


State 8

    6 FooBar: "foo" OptBar •

    $default  reduce using rule 6 (FooBar)


State 9

    0 $accept: parse "end of input" •

    $default  accept


State 10

    3 Names: Names Name •

    $default  reduce using rule 3 (Names)
